<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenAirMarket</string>

    <!-- Email and Password activity. -->
    <string name="title_activity_email_password">POS</string>
    <string name="hint_email">Email</string>
    <string name="hint_invalid_email">Email is invalid.</string>
    <string name="hint_password">Password</string>
    <string name="hint_invalid_password">Password is required.</string>
    <string name="hint_verification_email">Verification email sent to %s. Please look at your email inbox.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Welcome</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Open Air Market</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="account_failed">Account creation failed try again.</string>
    <string name="verification_sent">Verification email sent to %s.</string>
    <string name="verification_failed">Failed to send verification email.</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Open Air Market</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_drawer_pos">Point Of Sale</string>
    <string name="menu_drawer_offline">Offline</string>
    <string name="menu_drawer_log_out">Log Out</string>

    <!-- Main Fragment -->
    <string name="pos_title">Point Of Sales</string>

    <!-- Receipts and Search Box fragment -->
    <string name="receipt_tab_1">Receipt #1</string>
    <string name="receipt_tab_2">Receipt #2</string>
    <string name="receipt_tab_3">Receipt #3</string>
    <string name="receipt_cancel_btn">Cancel</string>
    <string name="receipt_pay_btn">Pay</string>
    <string name="receipt_code_bar_hint">Code Bar</string>
    <string name="receipt_snack_bar_msg">The product does not exist.</string>
    <!-- Dialog Buttons -->
    <string name="sale_dialog_positive_btn">Yes</string>
    <string name="sale_dialog_negative_btn">No</string>
    <!-- Cancel Dialog -->
    <string name="cancel_sale_dialog_title">Cancel Sale</string>
    <string name="cancel_sale_dialog_image_description">Cancel shopping cart</string>
    <string name="cancel_sale_dialog_message">Are you sure you want to CANCEL this Receipt?</string>
    <!-- Payment Dialog -->
    <string name="payment_sale_dialog_image_description">Shopping cart</string>
    <string name="payment_sale_dialog_title">Complete Sale</string>
    <string name="payment_sale_dialog_total_label">Total Amount:</string>
    <string name="payment_sale_dialog_payment_label">Payment Amount</string>
    <string name="payment_sale_dialog_change_label">Change:</string>
    <!-- BottomSheet menu labels -->
    <string name="bottom_sheet_quick_access">Quick Access Products.</string>
    <!-- Quick Access labels -->
    <string name="product_one_id">1</string>
    <string name="product_one_label">Fud Ham</string>
    <string name="product_two_id">2</string>
    <string name="product_two_label">Turkey Ham</string>
    <string name="product_three_id">3</string>
    <string name="product_three_label">Gali Ham</string>
    <string name="product_four_id">5</string>
    <string name="product_four_label">American Cheese</string>
    <string name="product_five_id">7</string>
    <string name="product_five_label">Cheese</string>
    <string name="product_six_id">6</string>
    <string name="product_six_label">Oaxaca Cheese</string>
    <string name="product_seven_id">12</string>
    <string name="product_seven_label">Bacon</string>
    <string name="product_eigth_id">14</string>
    <string name="product_eigth_label">Pork Sausage</string>

    <!-- Receipt table fragment -->
    <string name="receipt_row">Row</string>
    <string name="receipt_product_code">Product</string>
    <string name="receipt_product_name">Name</string>
    <string name="receipt_price">Price</string>
    <string name="receipt_quantity">Qty</string>
    <string name="receipt_subtotal">Total</string>
    <string name="receipt_total">Total: </string>

    <!-- Sale Channel and Notifications -->
    <string name="sale_channel_name">Sales</string>
    <string name="sale_channel_description">Sales notifications channel.</string>
    <string name="sale_notification_success_title">Sale Succeed</string>
    <string name="sale_notification_success_content">The sale was successful.</string>
    <string name="sale_notification_failure_title">Sale Failed</string>
    <string name="sale_notification_failure_content">The sale failed. Please retry one more time.</string>

    <!-- Data Sync Channel and Notifications -->
    <string name="data_sync_channel_name">Data Sync</string>
    <string name="data_sync_channel_description">Data Synchronization from Cloud notifications channel.</string>
    <string name="product_brand_data_sync_notification_success_title">Product Brands Synced</string>
    <string name="product_brand_data_sync_notification_success_content">The product brands were synced successfully.</string>
    <string name="product_brand_data_sync_notification_inprogress_title">Product Brands Syncing</string>
    <string name="product_brand_data_sync_notification_inprogress_content">The product brands syncing process started.</string>
    <string name="product_brand_data_sync_notification_failure_title">Product Brands Failure</string>
    <string name="product_brand_data_sync_notification_failure_content">The product brands synced failed.</string>
    <string name="product_category_data_sync_notification_success_title">Product Categories Synced</string>
    <string name="product_category_data_sync_notification_success_content">The product categories were synced successfully.</string>
    <string name="product_category_data_sync_notification_inprogress_title">Product Categories Syncing</string>
    <string name="product_category_data_sync_notification_inprogress_content">The product categories syncing process started.</string>
    <string name="product_category_data_sync_notification_failure_title">Product Categories Failure</string>
    <string name="product_category_data_sync_notification_failure_content">The product categories synced failed.</string>
    <string name="product_manufacturer_data_sync_notification_success_title">Product Manufacturer Synced</string>
    <string name="product_manufacturer_data_sync_notification_success_content">The product manufacturers were synced successfully.</string>
    <string name="product_manufacturer_data_sync_notification_inprogress_title">Product Manufacturer Syncing</string>
    <string name="product_manufacturer_data_sync_notification_inprogress_content">The product manufacturers syncing process started.</string>
    <string name="product_manufacturer_data_sync_notification_failure_title">Product Manufacturer Failure</string>
    <string name="product_manufacturer_data_sync_notification_failure_content">The product manufacturers synced failed.</string>
    <string name="product_measure_unit_data_sync_notification_success_title">Product Measure Units Synced</string>
    <string name="product_measure_unit_data_sync_notification_success_content">The product measure units were synced successfully.</string>
    <string name="product_measure_unit_data_sync_notification_inprogress_title">Product Measure Units Syncing</string>
    <string name="product_measure_unit_data_sync_notification_inprogress_content">The product measure units syncing process started.</string>
    <string name="product_measure_unit_data_sync_notification_failure_title">Product Measure Units Failure</string>
    <string name="product_measure_unit_data_sync_notification_failure_content">The product measure units synced failed.</string>
    <string name="products_data_sync_notification_success_title">Products Synced</string>
    <string name="products_data_sync_notification_success_content">The products were synced successfully.</string>
    <string name="products_data_sync_notification_inprogress_title">Products Syncing</string>
    <string name="products_data_sync_notification_inprogress_content">The products syncing process started.</string>
    <string name="products_data_sync_notification_failure_title">Products  Failure</string>
    <string name="products_data_sync_notification_failure_content">The products synced failed.</string>

    <!-- Column header long press -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="sort_clear">Sort Default</string>

    <!-- Offline Table View -->
    <string name="offline_header_id">Id</string>
    <string name="offline_header_number_docs"># Docs</string>
    <string name="offline_header_status">Status</string>
    <string name="offline_header_last_update">Last Update</string>

    <!-- Widget -->
    <string name="appwidget_title">Today</string>
    <string name="appwidget_sub_title">Sales:</string>
    <string name="appwidget_image_description">Sales Icon</string>
</resources>
