<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:layout_marginTop="@dimen/standard_spacing"
        android:contentDescription="@string/cancel_sale_dialog_image_description"
        app:srcCompat="@drawable/ic_remove_shopping" />

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          style="@style/TextAppearance.AppCompat.Title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginEnd="24dp"
          android:padding="@dimen/small_spacing"
          android:text="@string/cancel_sale_dialog_title" />
      </FrameLayout>
    </LinearLayout>

    <TextView
      style="@style/TextAppearance.AppCompat.Medium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginStart="@dimen/standard_spacing"
      android:layout_marginEnd="@dimen/standard_spacing"
      android:paddingTop="@dimen/small_spacing"
      android:paddingBottom="@dimen/small_spacing"
      android:text="@string/cancel_sale_dialog_message"
      android:textAlignment="center" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="@dimen/standard_spacing"
      android:orientation="horizontal"
      android:padding="@dimen/small_spacing">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_negative"
        style="@style/Widget.Pos.Button.OutlinedButton.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_spacing"
        android:text="@string/sale_dialog_negative_btn" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_positive"
        style="@style/Widget.Pos.Button.OutlinedButton.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_dialog_positive_btn" />
    </LinearLayout>
  </LinearLayout>
</com.google.android.material.card.MaterialCardView>