<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/standard_spacing">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/imageView2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:contentDescription="@string/payment_sale_dialog_image_description"
        app:srcCompat="@drawable/ic_shopping_cart" />

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          style="@style/TextAppearance.MyTheme.Headline"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginEnd="24dp"
          android:textStyle="bold"
          android:padding="@dimen/small_spacing"
          android:text="@string/payment_sale_dialog_title" />
      </FrameLayout>
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:orientation="horizontal">

      <TextView
        style="@style/TextAppearance.MyTheme.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_spacing"
        android:textStyle="bold"
        android:text="@string/payment_sale_dialog_total_label" />

      <TextView
        android:id="@+id/tv_total_amount"
        style="@style/TextAppearance.MyTheme.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red_700"
        android:fontFamily="@font/google_sans_bold"
        android:padding="@dimen/small_spacing"
        android:textStyle="bold"
        tools:text="$25.55" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/tiny_spacing"
      android:layout_marginBottom="@dimen/tiny_spacing"
      android:layout_marginStart="@dimen/large_spacing"
      android:layout_marginEnd="@dimen/large_spacing"
      android:hint="@string/payment_sale_dialog_payment_label">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_payment_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:orientation="horizontal">

      <TextView
        style="@style/TextAppearance.MyTheme.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black_alpha_86"
        android:padding="@dimen/small_spacing"
        android:text="@string/payment_sale_dialog_change_label"
        android:textStyle="bold"/>

      <TextView
        android:id="@+id/tv_change_amount"
        style="@style/TextAppearance.MyTheme.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_spacing"
        android:textColor="@color/grey_900"
        android:fontFamily="@font/google_sans_bold"
        android:textStyle="bold"
        tools:text="$2.86" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginEnd="@dimen/standard_spacing"
      android:orientation="horizontal"
      android:padding="@dimen/small_spacing">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_negative"
        style="@style/Widget.Pos.Button.OutlinedButton.Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale_dialog_negative_btn" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_positive"
        style="@style/Widget.Pos.Button.OutlinedButton.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_spacing"
        android:text="@string/sale_dialog_positive_btn" />
    </LinearLayout>
  </LinearLayout>
</com.google.android.material.card.MaterialCardView>