<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/shrine_small_spacing"
    android:paddingEnd="@dimen/shrine_small_spacing"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:padding="@dimen/shrine_small_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/shrine_small_spacing"
        android:paddingTop="@dimen/shrine_small_spacing"
        android:paddingEnd="@dimen/shrine_small_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shrine_small_spacing"
        android:paddingStart="@dimen/shrine_small_spacing"
        android:paddingTop="@dimen/shrine_tiny_spacing"
        android:paddingEnd="@dimen/shrine_small_spacing"
        android:paddingBottom="@dimen/shrine_small_spacing"
        tools:text="@string/nav_header_subtitle" />

</LinearLayout>
