<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/tiny_spacing"
        android:orientation="vertical">

        <TextView
            style="@style/Widget.Pos.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/tiny_spacing"
            android:text="@string/appwidget_title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            style="@style/Widget.Pos.TextView.SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/tiny_spacing"
            android:paddingEnd="@dimen/tiny_spacing"
            android:text="@string/appwidget_sub_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_sale_amount"
            style="@style/Widget.Pos.TextView.SectionHeaderEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/tiny_spacing"
            android:textAlignment="center"
            tools:text="$2500" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="@dimen/tiny_spacing"
        android:contentDescription="@string/appwidget_image_description"
        android:src="@mipmap/ic_launcher" />
</LinearLayout>